# entryp

./: LICENSE  README.md  pyproject.toml
entryp/: __init__.py  entrypoint.py
